--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,7 +33,7 @@ a.active {
 }
 
 .py-20 {
-    padding-top: 20px;
+    padding-top: 10px !important;
 }
 
 #accountInfo-tab, #users-tab, #fees-tab, #info-tab, #superAdmin-tab {
