--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -98,3 +98,18 @@ a.active {
     display: block;
     font-size: 18px;
   }
+
+  @media only screen and (max-width: 600px) {
+    #users-tab, #fees-tab, #info-tab, #superAdmin-tab {
+      width: 250px;
+      margin-left: -40px;
+      margin-top: 15px;
+    }
+    .card-header-tabs {
+      display: inline;
+    }
+    #accountInfo-tab {
+      width: 250px;
+      margin-left: -10px;
+    }
+  }
